--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,9 @@ h1 {
   color: blue;
   background-color: aqua;
 }
+.photo {
+  max-width: 50%;
+  display: block;
+  border-radius: 12px;
+  margin: 30px auto;
+}
